[gd_scene load_steps=16 format=3 uid="uid://q772sl7sx1ey"]

[ext_resource type="Script" path="res://src/Entities/Player/player_character.gd" id="1_dbouk"]
[ext_resource type="Texture2D" uid="uid://dvh2qysixkw8v" path="res://assets/player/man-death.png" id="2_rjjhn"]
[ext_resource type="Texture2D" uid="uid://do786uktn8esb" path="res://assets/player/man-idle.png" id="2_yog86"]
[ext_resource type="Texture2D" uid="uid://cdg1yemgdqn2p" path="res://assets/cane/spritesheet.png" id="3_hlhok"]
[ext_resource type="Script" path="res://src/Entities/Player/cane.gd" id="3_mjehx"]
[ext_resource type="Texture2D" uid="uid://ge5gg1fi6o0a" path="res://assets/player/man-walk-apart.png" id="4_iqrfc"]
[ext_resource type="Texture2D" uid="uid://dux03rs3lyfbl" path="res://assets/player/man-walk-together.png" id="5_7pd5r"]
[ext_resource type="AudioStream" uid="uid://cnawymajj0yhq" path="res://assets/player/player_death.wav" id="5_ks636"]
[ext_resource type="AudioStream" uid="uid://uvm32jgjew1u" path="res://assets/player/player_hurt.wav" id="6_jqup1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_110rp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rjjhn")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yog86")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_iqrfc")
}, {
"duration": 1.0,
"texture": ExtResource("5_7pd5r")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7b6ya"]
size = Vector2(55, 70)

[sub_resource type="Animation" id="Animation_rw050"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CaneSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CaneSprite/CaneHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_258y5"]
resource_name = "cane_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CaneSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CaneSprite/CaneHitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bg5ji"]
_data = {
"RESET": SubResource("Animation_rw050"),
"cane_attack": SubResource("Animation_258y5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bbn1"]
size = Vector2(59, 74)

[node name="PlayerCharacter" type="CharacterBody2D" groups=["player"]]
position = Vector2(568, 325)
script = ExtResource("1_dbouk")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_110rp")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_7b6ya")

[node name="Cane" type="Node2D" parent="."]
script = ExtResource("3_mjehx")
CANE_HITBOX_DISTANCE_FROM_PLAYER = 60.0

[node name="CaneSprite" type="Sprite2D" parent="Cane"]
position = Vector2(171, -23)
scale = Vector2(0.35, 0.35)
texture = ExtResource("3_hlhok")
hframes = 3

[node name="CaneHitbox" type="Area2D" parent="Cane/CaneSprite"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cane/CaneSprite/CaneHitbox"]
position = Vector2(-80, 0)
rotation = 1.5708
polygon = PackedVector2Array(0, 0, -85, -265, 85, -265)
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cane"]
libraries = {
"": SubResource("AnimationLibrary_bg5ji")
}

[node name="PlayerHurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtbox"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_8bbn1")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ks636")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jqup1")

[connection signal="cane_attack" from="." to="Cane" method="_on_player_character_cane_attack"]
[connection signal="body_entered" from="Cane/CaneSprite/CaneHitbox" to="Cane" method="_on_cane_hitbox_body_entered"]
